[package]
name = "luggo"
version = "0.1.0"
edition = "2024"

[features]
lua = ["mlua/lua54"]
luajit = ["mlua/luajit"]
wasm = ["wasmtime"]

[dependencies]
cfg-if = "1.0"
anyhow = "1.0.100"
mlua = { version = "0.11.3", optional = true, features = ["error-send"] }
wasmtime = { version = "37.0.0", optional = true }
